Update incorrect swagger comments for roles
