# docs/swagger.yaml
@@ -313,6 +313,13 @@ definitions:
         - $ref: '#/definitions/oscalTypes_1_1_3.Profile'
         description: Items from the list response
     type: object
+  handler.GenericDataResponse-oscalTypes_1_1_3_Role:
+    properties:
+      data:
+        allOf:
+        - $ref: '#/definitions/oscalTypes_1_1_3.Role'
+        description: Items from the list response
+    type: object
   handler.GenericDataResponse-oscalTypes_1_1_3_SystemCharacteristics:
     properties:
       data:
@@ -3767,7 +3774,7 @@ paths:
       - Oscal
   /oscal/parties/{id}:
     get:
-      description: Retrieves a single Party by its unique ID.
+      description: Retrieves a single Role by its unique ID.
       parameters:
       - description: Party ID
         in: path
@@ -3780,7 +3787,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handler.GenericDataResponse-oscalTypes_1_1_3_Party'
+            $ref: '#/definitions/handler.GenericDataResponse-oscalTypes_1_1_3_Role'
         "400":
           description: Bad Request
           schema:
@@ -3793,7 +3800,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.Error'
-      summary: Get a Party
+      summary: Get a Role
       tags:
       - Oscal
   /oscal/profiles:
@@ -4075,7 +4082,7 @@ paths:
       - Profiles
   /oscal/roles:
     get:
-      description: Retrieves all parties.
+      description: Retrieves all roles.
       produces:
       - application/json
       responses:
@@ -4091,7 +4098,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.Error'
-      summary: List parties
+      summary: List roles
       tags:
       - Oscal
   /oscal/system-security-plans:
